<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath />
    </parent>

    <groupId>io.github.loicgreffier</groupId>
    <artifactId>spring-boot-ai-quickstarts</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>spring-boot-ai-quickstarts</name>
    <description>Code samples around Spring Boot and AI</description>

    <modules>
        <module>chat-quickstarts</module>
        <module>mcp-quickstarts</module>
    </modules>

    <properties>
        <frontend-maven-plugin.version>2.0.1</frontend-maven-plugin.version>
        <java.version>25</java.version>
        <jib-maven-plugin.version>3.5.1</jib-maven-plugin.version>
        <opencsv.version>5.12.0</opencsv.version>
        <palantir.version>2.82.0</palantir.version>
        <sonar-maven-plugin.version>5.7.0.6970</sonar-maven-plugin.version>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.organization>loicgreffier</sonar.organization>
        <sonar.projectKey>loicgreffier_spring-boot-ai-quickstarts</sonar.projectKey>
        <spotless-maven-plugin.version>3.7.0</spotless-maven-plugin.version>
        <spring-ai.version>2.0.0</spring-ai.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <includes>
                            <include>src/main/java/**/*.java</include>
                            <include>src/test/java/**/*.java</include>
                        </includes>
                        <palantirJavaFormat>
                            <version>${palantir.version}</version>
                            <style>PALANTIR</style>
                            <formatJavadoc>true</formatJavadoc>
                        </palantirJavaFormat>
                        <removeUnusedImports />
                        <formatAnnotations />
                        <importOrder />
                        <trimTrailingWhitespace />
                        <endWithNewline />
                        <licenseHeader>
                            <file>${maven.multiModuleProjectDirectory}/.spotless/HEADER</file>
                        </licenseHeader>
                    </java>
                    <pom>
                        <includes>
                            <include>pom.xml</include>
                        </includes>
                        <sortPom>
                            <nrOfIndentSpace>4</nrOfIndentSpace>
                            <expandEmptyElements>false</expandEmptyElements>
                            <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
                            <sortDependencies>groupId,artifactId</sortDependencies>
                            <sortDependencyManagement>groupId,artifactId</sortDependencyManagement>
                            <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
                            <sortPlugins>groupId,artifactId</sortPlugins>
                            <sortProperties>true</sortProperties>
                            <sortModules>true</sortModules>
                            <endWithNewline />
                        </sortPom>
                    </pom>
                    <yaml>
                        <includes>
                            <include>src/main/resources/*.yml</include>
                            <include>src/test/resources/*.yml</include>
                        </includes>
                        <jackson>
                            <features>
                                <ORDER_MAP_ENTRIES_BY_KEYS>true</ORDER_MAP_ENTRIES_BY_KEYS>
                            </features>
                            <yamlFeatures>
                                <WRITE_DOC_START_MARKER>false</WRITE_DOC_START_MARKER>
                            </yamlFeatures>
                        </jackson>
                    </yaml>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <from>
                        <image>eclipse-temurin:25-jre-alpine</image>
                        <platforms>
                            <platform>
                                <architecture>amd64</architecture>
                                <os>linux</os>
                            </platform>
                            <platform>
                                <architecture>arm64</architecture>
                                <os>linux</os>
                            </platform>
                        </platforms>
                    </from>
                    <to>
                        <image>docker.io/loicgreffier/spring-boot-ai-quickstarts:${project.artifactId}-${project.version}</image>
                    </to>
                    <container>
                        <ports>
                            <port>8080</port>
                        </ports>
                    </container>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonar-maven-plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>production</id>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>com.github.eirslett</groupId>
                            <artifactId>frontend-maven-plugin</artifactId>
                            <version>${frontend-maven-plugin.version}</version>
                            <configuration>
                                <workingDirectory>ui</workingDirectory>
                                <installDirectory>target</installDirectory>
                            </configuration>
                            <executions>
                                <execution>
                                    <id>install node and npm</id>
                                    <goals>
                                        <goal>install-node-and-npm</goal>
                                    </goals>
                                    <configuration>
                                        <nodeVersion>v26.3.1</nodeVersion>
                                    </configuration>
                                </execution>

                                <execution>
                                    <id>npm run install</id>
                                    <goals>
                                        <goal>npm</goal>
                                    </goals>
                                    <configuration>
                                        <arguments>install</arguments>
                                    </configuration>
                                </execution>

                                <execution>
                                    <id>npm run build</id>
                                    <goals>
                                        <goal>npm</goal>
                                    </goals>
                                    <configuration>
                                        <arguments>run build -- --configuration production</arguments>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-resources-plugin</artifactId>
                            <executions>
                                <execution>
                                    <id>copy Front-End to Back-End</id>
                                    <goals>
                                        <goal>copy-resources</goal>
                                    </goals>
                                    <phase>process-resources</phase>
                                    <configuration>
                                        <outputDirectory>${project.build.directory}/classes/public</outputDirectory>
                                        <resources>
                                            <resource>
                                                <directory>${project.basedir}/ui/dist/ui/browser</directory>
                                            </resource>
                                        </resources>
                                    </configuration>
                                </execution>
                            </executions>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
